# Strategy_Auto_Trader

./: .claudeignore  .gitignore  BACKTEST_IN_PROGRESS.md  CLAUDE.md  CREATE_SCHEDULED_TASK.bat  CREATE_SCHEDULED_TASK.ps1  IMPLEMENTATION_COMPLETE.md  README.md  README_DAEMON.md  RESILIENCE_IMPLEMENTATION.md  TASK_SCHEDULER_SETUP.md  USERGUIDE.md  USER_GUIDE_DAEMON_SETUP.md  check_ibkr.py  pyproject.toml  run_daemon.bat  run_ftse.bat  run_sp500.bat  run_sp500_backtest.py
Strategy_Auto_Trader/: DAEMON_RESILIENCE.md  __init__.py
Strategy_Auto_Trader/broker/: __init__.py  daily_limits.py  ibkr_adapter.py  ibkr_data.py  in_flight_marker.py  null_adapter.py  portfolio.py  protocols.py  reconcile.py  signal_reader.py  symbols.py  types.py
Strategy_Auto_Trader/core/: atomic_io.py  (+4 more)
config/: overnight_strategy.json  scan_tickers.json  universe_full.json  universe_sp_ftse.json  watchlist.json  watchlist_ftse.json  watchlist_sp500.json  watchlist_sp500_optimised.json
scripts/: analyze_all_strategies.py  analyze_conservative_losers.py  analyze_full_scan.py  analyze_full_scan_enhanced.py  analyze_journal.py  backfill_position_currency.py  compare_conservative_variants.py  comprehensive_csv.py  comprehensive_report.py  concurrent_correct.py  concurrent_final.py  conservative_summary.py  conservative_to_excel.py  estimate_concurrent.py  garch_vol_prototype.py  ibkr_data_pilot.py  max_concurrent_positions.py  paper_sim.py  regression_compare.py  repair_state_units.py  run_sp20_backtest.ps1  simplify_journals.py  ticker_pnl_summary.py
tests/: conftest.py  test_integration.py
(+108 files in other folders)
